--- a/CALMAUI/Pages/TareasComponent.razor
+++ b/CALMAUI/Pages/TareasComponent.razor
@@ -1,4 +1,4 @@
-﻿@page "/tareas/{accion?}/{i?}"
+﻿@page "/tareas/{accion?}/{fechaviene?}/{i?}"
 @inherits TareasComponentBase
 
 <h3>Tareas Calendario  (@if(tareas != null){ @tareas.Count().ToString(); })</h3>
@@ -15,7 +15,9 @@
         <table class="col-sm-12 col-md-12 col-lg-12">
             <tr class="bg-dark rounded-circle">
                 <th class="text-center text-light rounded-sm col-sm-12 col-md-12 col-lg-12 h2"
-                @onclick="@Cierra" style="cursor:pointer;">Crear Tarea<span class="float-end text-right badge badge-dark">X</span>
+                @onclick="@Cierra" style="cursor:pointer;">        
+                Crear Tarea @accion.ToString() - @i.ToString()
+                <span class="float-end text-right badge badge-dark">X</span>
             </th></tr>
             <tr>
                 <td>
