--- a/CALMAUI/Shared/NavMenu.razor
+++ b/CALMAUI/Shared/NavMenu.razor
@@ -26,12 +26,12 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="tareas">
-                <span class="oi oi-browser" aria-hidden="true"></span> Tareas_-_Periodo
+                <span class="oi oi-browser" aria-hidden="true"></span> Tareas Periodo
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="citas">
-                <span class="oi oi-pencil" aria-hidden="true"></span> Citas_-_Fecha
+            <NavLink class="nav-link" href="citas/">
+                <span class="oi oi-pencil" aria-hidden="true"></span> Citas Fecha
             </NavLink>
         </div>
         <div class="nav-item px-3">
